test/success/integration/_succ_expr_rem_1.hs
x :: Int
x = 4 rem 3
main = print x