test/fail/integration/_fail_sem_expr_elem_1.hs
x :: Int
x = elem 3
main = print "hello"